# ISLab6

./: CMakeLists.txt  fs.hpp  main.cpp  uuid.hpp  vcpkg.json
